src/main/java/com/example/jpa_study/project/error/exception/NotEnoughStockException.java
package com.example.jpa_study.project.error.exception;

import com.example.jpa_study.project.error.ErrorCode;

public class NotEnoughStockException extends BusinessException {
    public NotEnoughStockException(ErrorCode errorCode) {
        super(errorCode);
    }
}
